--- a/_config.yml
+++ b/_config.yml
@@ -5,6 +5,9 @@ permalink: /:title
 exclude: [".rvmrc", ".rbenv-version", "README.md", "Rakefile", "changelog.md", "bak"]
 pygments: true
 
+#change the default interpreter from Maruku to Kramdown, because the Maruku program was shut down in October 2012
+markdown: kramdown
+
 # Themes are encouraged to use these universal variables 
 # so be sure to set them if your theme uses them.
 #
